// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps matches snapshot for nested children 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-green-500 bg-white"
      >
        <span
          class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
        >
          1
        </span>
        <span
          class="ml-2"
        >
          Amount
        </span>
      </div>
      <div
        class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-transparent"
      >
        <span
          class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
        >
          2
        </span>
        <span
          class="ml-2"
        >
          Beneficiary
        </span>
      </div>
      <div
        class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-transparent"
      >
        <span
          class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
        >
          3
        </span>
        <span
          class="ml-2"
        >
          Confirm & Pay
        </span>
      </div>
    </div>
    <div>
      <form
        data-testid="form"
      >
        <h1>
          Form 1
        </h1>
        <button>
          Continue
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Steps navigate to next step when submitting a form 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-1 pb-4 pt-3 px-2 cursor-pointer text-gray-400 border-t-4 border-gray-400"
      >
        <svg
          class="w-7 h-7 flex-shrink-0 font-normal"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="ml-2"
        >
          Amount
        </span>
      </div>
      <div
        class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-green-500 bg-white"
      >
        <span
          class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
        >
          2
        </span>
        <span
          class="ml-2"
        >
          Beneficiary
        </span>
      </div>
      <div
        class="flex flex-1 pb-4 pt-3 px-2 cursor-default border-t-4 border-transparent"
      >
        <span
          class="flex justify-center p-0.5 w-6 h-6 rounded-2xl text-xs text-white bg-teal-700"
        >
          3
        </span>
        <span
          class="ml-2"
        >
          Confirm & Pay
        </span>
      </div>
    </div>
    <div>
      <div
        class="w-full"
      >
        <div>
          <form
            data-testid="form"
          >
            <h1>
              Form 2A
            </h1>
            <button>
              Continue
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
